# softroboticfish7

./: .gitattributes  .gitignore  Fishtown_ROS_Guideline.md  LICENSE  README.md  environment.sh  getVolume.sh  killFishJoystick.sh  killFishProcesses.sh  rc.local  reboot.sh  setVolume.sh  shutdown.sh  sofi_v7_main.sch  startup_rx.sh  startup_rx_serial.sh  viewFishProcesses.sh  wpa_supplicant.conf
LPCExpress/.metadata/: version.ini
LPCExpress/robotic_fish_6/: .cproject
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
controller/: AcousticJoystickController.py  README.md  killControllerProcesses.sh  rc.local  startup_tx.sh  viewControllerProcesses.sh
fish/mbed/: README.md
fish/pi/: README.md  (+16 more)
fish/pi/visual_pose_estimation/: CMakeLists.txt  bin_colors.m  bins_ex123456_16x16x10.txt  bins_ex123_16x16x10.txt  bins_ex1_10x8x4.txt  bins_ex456_16x16x10.txt  histogram.h  instructions.txt  line_detection.cpp  line_detection_histogram.cpp  print_array.m  threshold_tester.cpp
fish4_code/: reboot.sh
hardware/: sofi_v7_main.brd
logging/: 16-07-28 good mission results.xlsx  GOODLOG  curate.sh  log_serial.py  plotLog.sh  plotParamAct  plotParamTemplate  write_serial.py
mbed/: BrushlessMotor.lib  FishController.cpp  FishController.h  MODDMA.lib  Servo.lib  data_stream_format.txt  main.cpp  remountMbed.sh  resetMbed.py  shutdown  startup
mbed_robotic_fish_6/: .cproject  .project  ButtonBoard.h  FishController.cpp  FishController.h  main.cpp
python/: camera.py  fishcontrol_playwav.py  rx.py  rx_controller.py
setup/: duckietown_install_car.sh
wifi_setup/: README.md
(+899 files in other folders)
